Añadido grid y clases a través de module.css
Signed-off-by: Carranza <mcarranza@contractor.deloitte.es>

--- a/src/components/Canvas/canvas.module.css
+++ b/src/components/Canvas/canvas.module.css
@@ -1,6 +1,4 @@
 .Canvas{
-    width: 70vw;
-    height: 80vh;
-    border: 1px solid #777;
-    background-color: white;
+    grid-area: canvas;
+    border: 1px solid grey;
 }
