--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -1,3 +1,9 @@
 .App{
-    
+    display: grid;
+    grid-template-columns: 10vw 90vw;
+    grid-template-rows: 10vh 75vh 15vh;
+    grid-template-areas: 
+        "toolbar toolbar"
+        "colorbar canvas"
+        "lineselector canvas"
 }
