Primer mockup del diseño
Signed-off-by: Carranza <mcarranza@contractor.deloitte.es>

--- a/src/components/Canvas/canvas.module.css
+++ b/src/components/Canvas/canvas.module.css
@@ -1,4 +1,13 @@
-.Canvas{
+.CanvasWrapper{
     grid-area: canvas;
-    border: 1px solid grey;
+    display: flex;
+    justify-content: center;
 }
+
+.Canvas{
+    border: 1px solid var(--borders);
+    width: 80vw;
+    height: 85vh;
+    background-color: white;
+}
+
