--- a/src/components/Colorbar/Color/color.module.css
+++ b/src/components/Colorbar/Color/color.module.css
@@ -1,5 +1,12 @@
 .colorButton{
-    width: 30px;
-    height: 30px;
-    border-radius: 15px;
+    width: 3rem;
+    height: 3rem;
+    border: none;
+    margin: 1rem 0rem;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.colorButton:hover{
+    transform: translateX(5px);
 }
