--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -5,5 +5,6 @@
     grid-template-areas: 
         "toolbar toolbar"
         "colorbar canvas"
-        "lineselector canvas"
+        "lineselector canvas";
+    background-color: var(--background);
 }
