--- a/src/components/Colorbar/Color/color.module.css
+++ b/src/components/Colorbar/Color/color.module.css
@@ -5,6 +5,7 @@
     margin: 1rem 0rem;
     transition: all .5s;
     cursor: pointer;
+    border: 1px solid var(--color-border);
 }
 
 .colorButton:hover{
