--- a/src/components/Canvas/canvas.module.css
+++ b/src/components/Canvas/canvas.module.css
@@ -5,9 +5,10 @@
 }
 
 .Canvas{
-    border: 1px solid var(--borders);
+    border: 1px solid var(--color-border);
     width: 80vw;
     height: 85vh;
     background-color: white;
+    overflow: auto;
 }
 
