--- a/src/components/Canvas/canvas.module.css
+++ b/src/components/Canvas/canvas.module.css
@@ -1,6 +1,14 @@
-.Canvas{
-    width: 70vw;
-    height: 80vh;
-    border: 1px solid #777;
-    background-color: white;
+.CanvasWrapper{
+    grid-area: canvas;
+    display: flex;
+    justify-content: center;
 }
+
+.Canvas{
+    border: 1px solid var(--color-border);
+    width: 80vw;
+    height: 85vh;
+    background-color: white;
+    overflow: auto;
+}
+
