--- a/src/components/Colorbar/Color/color.module.css
+++ b/src/components/Colorbar/Color/color.module.css
@@ -3,11 +3,15 @@
     height: 3rem;
     border: none;
     margin: 1rem 0rem;
-    transition: all .5s;
+    transition: all .3s;
     cursor: pointer;
     border: 1px solid var(--color-border);
 }
 
 .colorButton:hover{
     transform: translateX(5px);
+}
+
+.colorButton:active{
+    transform: translateX(5px) rotate(90deg);
 }
