--- a/src/components/LineWidth/Width/width.module.css
+++ b/src/components/LineWidth/Width/width.module.css
@@ -1,12 +1,30 @@
+.widthWrap{
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .25rem 0;
+    transition: all .3s;
+}
+
+.widthWrap:hover{
+    transform: scale(1.2);
+}
+
+.widthWrap:active{
+    transform: scale(0.8);
+}
+
+.widthWrap:hover .widthButton{
+    background-color: var(--detail);
+}
+
+
 .widthButton{
     background-color: hsl(0, 0%, 20%);
     width: 100%;
     margin: .5rem 0rem;
     border: none;
-    cursor: pointer;
     transition: all .3s;
-}
-
-.widthButton:hover{
-    background-color: var(--detail);
+    cursor: pointer;
 }
