--- a/src/components/Toolbar/Tools/buttons.module.css
+++ b/src/components/Toolbar/Tools/buttons.module.css
@@ -15,13 +15,13 @@
   background-color: var(--detail);
   color: var(--letters);
   cursor: pointer;
-  -webkit-box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 5px 5px 0px 0px var(--shadow);
 }
 
 .Button:enabled:hover {
-  -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 0px 0px var(--shadow);
+}
+
+.Button:enabled:active{
+  box-shadow: 0px 0px 0px 0px var(--shadow);
 }
